# ebpf-log-monitor

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/bpf/: log_monitor.bpf.c  log_monitor.h
