[package]
name = "ebpf-log-monitor"
version = "0.1.0"
edition = "2021"
authors = ["Anubhav Gain <iamanubhavgain@gmail.com>"]
description = "An eBPF-based system log monitoring tool with security focus"

[dependencies]
libbpf-rs = "0.19.1"
anyhow = "1.0"
clap = { version = "4.2", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.2"
libc = "0.2"

[build-dependencies]
libbpf-cargo = "0.19.1"
